ripa-v9.0.23