@@ -1,11 +1,16 @@
 package fi.uta.ristiinopiskelu.persistence.querybuilder;
 
+import co.elastic.clients.elasticsearch._types.FieldValue;
+import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
+import co.elastic.clients.elasticsearch._types.query_dsl.ChildScoreMode;
+import co.elastic.clients.elasticsearch._types.query_dsl.Query;
+import co.elastic.clients.elasticsearch._types.query_dsl.RangeQuery;
+import co.elastic.clients.json.JsonData;
 import fi.uta.ristiinopiskelu.datamodel.dto.current.common.Language;
 import fi.uta.ristiinopiskelu.datamodel.dto.current.common.StudyStatus;
 import fi.uta.ristiinopiskelu.datamodel.dto.current.common.TeachingLanguage;
+import fi.uta.ristiinopiskelu.datamodel.dto.current.common.studyrecord.MinEduGuidanceArea;
 import fi.uta.ristiinopiskelu.persistence.utils.DateUtils;
-import org.apache.lucene.search.join.ScoreMode;
-import org.elasticsearch.index.query.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.util.CollectionUtils;
@@ -15,47 +20,56 @@ import java.time.LocalDate;
 import java.time.OffsetDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static org.elasticsearch.index.query.QueryBuilders.wildcardQuery;
 
 public class CourseUnitRealisationQueryBuilder extends AbstractStudiesQueryBuilder {
 
     private Logger logger = LoggerFactory.getLogger(CourseUnitRealisationQueryBuilder.class);
 
-    public void filterByRealisationStartAndEndDate(BoolQueryBuilder mainRealisationQuery, BoolQueryBuilder mainAssessmentItemQuery,
+    public void filterByRealisationStartAndEndDate(BoolQuery.Builder mainRealisationQuery, BoolQuery.Builder mainAssessmentItemQuery,
                                                    LocalDate startDate, LocalDate endDate) {
         if(startDate == null && endDate == null) {
             return;
         }
 
-        BoolQueryBuilder realisationDateQuery = QueryBuilders.boolQuery();
-        BoolQueryBuilder assessmentItemRealisationDateQuery = QueryBuilders.boolQuery();
+        BoolQuery.Builder realisationDateQuery = new BoolQuery.Builder();
+        BoolQuery.Builder assessmentItemRealisationDateQuery = new BoolQuery.Builder();
 
         if(startDate != null) {
-            realisationDateQuery.must(QueryBuilders.rangeQuery("realisations.startDate").lte(startDate.format(DateTimeFormatter.ISO_LOCAL_DATE)));
-            assessmentItemRealisationDateQuery.must(QueryBuilders.rangeQuery("completionOptions.assessmentItems.realisations.startDate")
-                .lte(startDate.format(DateTimeFormatter.ISO_LOCAL_DATE)));
+            realisationDateQuery.must(q -> q
+                .range(rq -> rq
+                    .field("realisations.startDate")
+                    .lte(JsonData.of(startDate.format(DateTimeFormatter.ISO_LOCAL_DATE)))));
+
+            assessmentItemRealisationDateQuery.must(q -> q
+                .range(rq -> rq
+                    .field("completionOptions.assessmentItems.realisations.startDate")
+                    .lte(JsonData.of(startDate.format(DateTimeFormatter.ISO_LOCAL_DATE)))));
         }
 
         if(endDate != null) {
-            realisationDateQuery.must(QueryBuilders.boolQuery()
-                .should(QueryBuilders.boolQuery().mustNot(QueryBuilders.existsQuery("realisations.endDate")))
-                .should(QueryBuilders.rangeQuery("realisations.endDate")
-                    .gte(endDate.format(DateTimeFormatter.ISO_LOCAL_DATE))));
+            realisationDateQuery.must(q -> q
+                .bool(bq -> bq
+                    .should(q2 -> q2
+                        .bool(bq2 -> bq2
+                            .mustNot(eq -> eq
+                                .exists(eq2 -> eq2.field("realisations.endDate")))))
+                    .should(q2 -> q2
+                        .range(rq -> rq
+                            .field("realisations.endDate")
+                            .gte(JsonData.of(endDate.format(DateTimeFormatter.ISO_LOCAL_DATE)))))));
 
-            assessmentItemRealisationDateQuery.must(QueryBuilders.boolQuery()
-                .should(QueryBuilders.boolQuery().mustNot(QueryBuilders.existsQuery("completionOptions.assessmentItems.realisations.endDate")))
-                .should(QueryBuilders.rangeQuery("completionOptions.assessmentItems.realisations.endDate")
-                    .gte(endDate.format(DateTimeFormatter.ISO_LOCAL_DATE))));
+            assessmentItemRealisationDateQuery.must(q -> q.bool(bq -> bq
+                .should(q2 -> q2.bool(bq2 -> bq2.mustNot(eq -> eq.exists(eq2 -> eq2.field("completionOptions.assessmentItems.realisations.endDate")))))
+                .should(q2 -> q2.range(rq -> rq.field("completionOptions.assessmentItems.realisations.endDate")
+                    .gte(JsonData.of(endDate.format(DateTimeFormatter.ISO_LOCAL_DATE)))))));
         }
 
-        mainRealisationQuery.must(realisationDateQuery);
-        mainAssessmentItemQuery.must(assessmentItemRealisationDateQuery);
+        mainRealisationQuery.must(realisationDateQuery.build()._toQuery());
+        mainAssessmentItemQuery.must(assessmentItemRealisationDateQuery.build()._toQuery());
     }
 
-    public void filterByRealisationEnrollmentStartAndEndDateTime(BoolQueryBuilder mainRealisationQuery,
-                                                                 BoolQueryBuilder mainAssessmentItemQuery,
+    public void filterByRealisationEnrollmentStartAndEndDateTime(BoolQuery.Builder mainRealisationQuery,
+                                                                 BoolQuery.Builder mainAssessmentItemQuery,
                                                                  OffsetDateTime enrollmentStartDateTimeFrom,
                                                                  OffsetDateTime enrollmentStartDateTimeTo,
                                                                  OffsetDateTime enrollmentEndDateTimeFrom,
@@ -65,65 +79,71 @@ public class CourseUnitRealisationQueryBuilder extends AbstractStudiesQueryBuild
             return;
         }
 
-        BoolQueryBuilder query = QueryBuilders.boolQuery();
-
-        BoolQueryBuilder realisationDateQuery = QueryBuilders.boolQuery();
-        BoolQueryBuilder assessmentItemRealisationDateQuery = QueryBuilders.boolQuery();
+        BoolQuery.Builder realisationDateQuery = new BoolQuery.Builder();
+        BoolQuery.Builder assessmentItemRealisationDateQuery = new BoolQuery.Builder();
 
         if(enrollmentStartDateTimeFrom != null || enrollmentStartDateTimeTo != null) {
-            RangeQueryBuilder rqb = QueryBuilders.rangeQuery("realisations.enrollmentStartDateTime");
-            RangeQueryBuilder aqb = QueryBuilders.rangeQuery("completionOptions.assessmentItems.realisations.enrollmentStartDateTime");
+            RangeQuery.Builder rqb = new RangeQuery.Builder().field("realisations.enrollmentStartDateTime");
+            RangeQuery.Builder aqb = new RangeQuery.Builder().field("completionOptions.assessmentItems.realisations.enrollmentStartDateTime");
 
             if (enrollmentStartDateTimeFrom != null) {
                 String startFrom = enrollmentStartDateTimeFrom.format(DateUtils.getFormatter());
-                rqb.gte(startFrom);
-                aqb.gte(startFrom);
+                rqb.gte(JsonData.of(startFrom));
+                aqb.gte(JsonData.of(startFrom));
             }
 
             if (enrollmentStartDateTimeTo != null) {
                 String startTo = enrollmentStartDateTimeTo.format(DateUtils.getFormatter());
-                rqb.lte(startTo);
-                aqb.lte(startTo);
+                rqb.lte(JsonData.of(startTo));
+                aqb.lte(JsonData.of(startTo));
             }
 
-            realisationDateQuery.must(rqb);
-            assessmentItemRealisationDateQuery.must(aqb);
+            realisationDateQuery.must(rqb.build()._toQuery());
+            assessmentItemRealisationDateQuery.must(aqb.build()._toQuery());
         }
 
         if(enrollmentEndDateTimeFrom != null || enrollmentEndDateTimeTo != null) {
-            RangeQueryBuilder rqb = QueryBuilders.rangeQuery("realisations.enrollmentEndDateTime");
-            RangeQueryBuilder aqb = QueryBuilders.rangeQuery("completionOptions.assessmentItems.realisations.enrollmentEndDateTime");
+            RangeQuery.Builder rqb = new RangeQuery.Builder().field("realisations.enrollmentEndDateTime");
+            RangeQuery.Builder aqb = new RangeQuery.Builder().field("completionOptions.assessmentItems.realisations.enrollmentEndDateTime");
 
             if (enrollmentEndDateTimeFrom != null) {
                 String endFrom = enrollmentEndDateTimeFrom.format(DateUtils.getFormatter());
-                rqb.gte(endFrom);
-                aqb.gte(endFrom);
+                rqb.gte(JsonData.of(endFrom));
+                aqb.gte(JsonData.of(endFrom));
             }
 
             if (enrollmentEndDateTimeTo != null) {
                 String endTo = enrollmentEndDateTimeTo.format(DateUtils.getFormatter());
-                rqb.lte(endTo);
-                aqb.lte(endTo);
+                rqb.lte(JsonData.of(endTo));
+                aqb.lte(JsonData.of(endTo));
             }
 
             if (enrollmentEndDateTimeTo == null) {
-                realisationDateQuery.must(QueryBuilders.boolQuery()
-                    .should(QueryBuilders.boolQuery().mustNot(QueryBuilders.existsQuery("realisations.enrollmentEndDateTime")))
-                    .should(rqb));
-                assessmentItemRealisationDateQuery.must(QueryBuilders.boolQuery()
-                    .should(QueryBuilders.boolQuery().mustNot(QueryBuilders.existsQuery("completionOptions.assessmentItems.realisations.enrollmentEndDateTime")))
-                    .should(aqb));
+                realisationDateQuery.must(q -> q.bool(bq -> bq
+                    .should(bq2 -> bq2
+                        .bool(bq3 -> bq3
+                            .mustNot(eq -> eq
+                                .exists(eq2 -> eq2
+                                    .field("realisations.enrollmentEndDateTime")))))
+                    .should(rqb.build()._toQuery())));
+                assessmentItemRealisationDateQuery.must(q -> q.bool(bq -> bq
+                    .should(q2 -> q2
+                        .bool(bq2 -> bq2
+                            .mustNot(eq -> eq
+                                .exists(eq2 -> eq2
+                                    .field("completionOptions.assessmentItems.realisations.enrollmentEndDateTime")))))
+                    .should(aqb.build()._toQuery())));
             } else {
-                realisationDateQuery.must(rqb);
-                assessmentItemRealisationDateQuery.must(aqb);
+                realisationDateQuery.must(rqb.build()._toQuery());
+                assessmentItemRealisationDateQuery.must(aqb.build()._toQuery());
             }
         }
 
-        mainAssessmentItemQuery.must(assessmentItemRealisationDateQuery);
-        mainRealisationQuery.must(realisationDateQuery);
+        mainAssessmentItemQuery.must(assessmentItemRealisationDateQuery.build()._toQuery());
+        mainRealisationQuery.must(realisationDateQuery.build()._toQuery());
     }
 
-    public void filterByRealisationNameOrIdentifierCode(BoolQueryBuilder mainRealisationQuery, BoolQueryBuilder mainAssessmentItemQuery,
+    public void filterByRealisationNameOrIdentifierCode(BoolQuery.Builder mainRealisationQuery, BoolQuery.Builder mainAssessmentItemQuery,
                                                         String queryString, Language lang) {
         if(StringUtils.isEmpty(queryString) || lang == null) {
             return;
@@ -131,72 +151,110 @@ public class CourseUnitRealisationQueryBuilder extends AbstractStudiesQueryBuild
 
         String formattedQuery = String.format("*%s*", queryString.toLowerCase());
 
-        BoolQueryBuilder realisationNameOrCodeQuery = QueryBuilders.boolQuery()
-            .must(QueryBuilders.boolQuery()
-                .should(wildcardQuery(String.format("realisations.name.values.%s.lowercase", lang.getValue()), formattedQuery))
-                .should(wildcardQuery("realisations.realisationIdentifierCode.lowercase", formattedQuery)));
+        Query realisationNameOrCodeQuery = new Query.Builder().bool(q -> q
+            .must(q2 -> q2.bool(bq -> bq
+                .should(q3 -> q3
+                    .wildcard(wq -> wq
+                        .field(String.format("realisations.name.values.%s.lowercase", lang.getValue()))
+                        .value(formattedQuery)))
+                .should(q3 -> q3
+                    .wildcard(wq -> wq
+                        .field("realisations.realisationIdentifierCode.lowercase")
+                        .value(formattedQuery))))))
+            .build();
 
-        BoolQueryBuilder assessmentItemRealisationNameOrCodeQuery = QueryBuilders.boolQuery()
-            .must(QueryBuilders.boolQuery()
-                .should(wildcardQuery(String.format("completionOptions.assessmentItems.realisations.name.values.%s.lowercase", lang.getValue()), formattedQuery))
-                .should(wildcardQuery("completionOptions.assessmentItems.realisations.realisationIdentifierCode.lowercase", formattedQuery)));
+        Query assessmentItemRealisationNameOrCodeQuery = new Query.Builder().bool(q -> q
+            .must(q2 -> q2.bool(bq -> bq
+                .should(q3 -> q3
+                    .wildcard(wq -> wq
+                        .field(String.format("completionOptions.assessmentItems.realisations.name.values.%s.lowercase", lang.getValue()))
+                        .value(formattedQuery)))
+                .should(q3 -> q3
+                    .wildcard(wq -> wq
+                        .field("completionOptions.assessmentItems.realisations.realisationIdentifierCode.lowercase")
+                        .value(formattedQuery))))))
+            .build();
 
         mainAssessmentItemQuery.must(assessmentItemRealisationNameOrCodeQuery);
         mainRealisationQuery.must(realisationNameOrCodeQuery);
     }
 
-    public void filterByRealisationCooperationNetwork(BoolQueryBuilder mainRealisationQuery, BoolQueryBuilder mainAssessmentItemQuery,
+    public void filterByRealisationCooperationNetwork(BoolQuery.Builder mainRealisationQuery, BoolQuery.Builder mainAssessmentItemQuery,
                                                       List<String> networkIds, boolean onlyEnrollable) {
 
         if(!onlyEnrollable) {
             return;
         }
 
-        BoolQueryBuilder networkQuery = getNetworksValidFilter(
+        Query networkQuery = getNetworksValidFilter(
             "realisations.cooperationNetworks", networkIds, false);
-        BoolQueryBuilder assessmentItemRealisatioNetworkQuery = getNetworksValidFilter(
+        Query assessmentItemRealisatioNetworkQuery = getNetworksValidFilter(
             "completionOptions.assessmentItems.realisations.cooperationNetworks", networkIds, false);
 
-        NestedQueryBuilder nestedNetworkQuery = QueryBuilders.nestedQuery(
-            "realisations.cooperationNetworks", networkQuery, ScoreMode.None).ignoreUnmapped(true);
-        NestedQueryBuilder nestedAssessmentItemRealisationNetworkQuery = QueryBuilders.nestedQuery(
-            "completionOptions.assessmentItems.realisations.cooperationNetworks",
-            assessmentItemRealisatioNetworkQuery, ScoreMode.None).ignoreUnmapped(true)
-            .innerHit(new InnerHitBuilder("assessmentItemRealisationNetworksValidQuery_cooperationNetworks"));
+        Query nestedNetworkQuery = new Query.Builder().nested(q -> q
+                .path("realisations.cooperationNetworks")
+                .query(networkQuery)
+                .scoreMode(ChildScoreMode.None)
+                .ignoreUnmapped(true))
+            .build();
+
+        Query nestedAssessmentItemRealisationNetworkQuery = new Query.Builder().nested(q -> q
+                .path("completionOptions.assessmentItems.realisations.cooperationNetworks")
+                .query(assessmentItemRealisatioNetworkQuery)
+                .scoreMode(ChildScoreMode.None)
+                .ignoreUnmapped(true)
+                .innerHits(ih -> ih.name("assessmentItemRealisationNetworksValidQuery_cooperationNetworks")))
+            .build();
 
         // check enrollmentClosed
-        BoolQueryBuilder realisationEnrollmentNotClosedQuery = QueryBuilders.boolQuery()
-            .must(QueryBuilders.termQuery("realisations.enrollmentClosed", false));
-        BoolQueryBuilder assessmentItemRealisationEnrollmentNotClosedQuery = QueryBuilders.boolQuery()
-            .must(QueryBuilders.termQuery("completionOptions.assessmentItems.realisations.enrollmentClosed", false));
+        Query realisationEnrollmentNotClosedQuery = new Query.Builder().bool(q -> q
+                .must(q2 -> q2
+                    .term(tq -> tq
+                        .field("realisations.enrollmentClosed")
+                        .value(false))))
+            .build();
 
-        mainRealisationQuery.must(QueryBuilders.boolQuery()
+        Query assessmentItemRealisationEnrollmentNotClosedQuery = new Query.Builder().bool(q -> q
+                .must(q2 -> q2
+                    .term(tq -> tq
+                        .field("completionOptions.assessmentItems.realisations.enrollmentClosed")
+                        .value(false))))
+            .build();
+
+        mainRealisationQuery.must(q -> q.bool(bq -> bq
             .must(nestedNetworkQuery)
-            .must(realisationEnrollmentNotClosedQuery));
+            .must(realisationEnrollmentNotClosedQuery)));
 
-        mainAssessmentItemQuery.must(QueryBuilders.boolQuery()
+        mainAssessmentItemQuery.must(q -> q.bool(bq -> bq
             .must(nestedAssessmentItemRealisationNetworkQuery)
-            .must(assessmentItemRealisationEnrollmentNotClosedQuery));
+            .must(assessmentItemRealisationEnrollmentNotClosedQuery)));
     }
 
-    public void filterByTeachingLanguages(BoolQueryBuilder mainRealisationQuery, BoolQueryBuilder mainAssessmentItemQuery,
+    public void filterByTeachingLanguages(BoolQuery.Builder mainRealisationQuery, BoolQuery.Builder mainAssessmentItemQuery,
                                           List<String> realisationTeachingLanguages) {
         if(!CollectionUtils.isEmpty(realisationTeachingLanguages)) {
-            BoolQueryBuilder realisationTeachingLanguageQuery = QueryBuilders.boolQuery();
-            BoolQueryBuilder assessmentItemRealisationTeachingLanguageQuery = QueryBuilders.boolQuery();
+            BoolQuery.Builder realisationTeachingLanguageQuery = new BoolQuery.Builder();
+            BoolQuery.Builder assessmentItemRealisationTeachingLanguageQuery = new BoolQuery.Builder();
 
-            String[] realisationTeachingLanguageValuesExcludingUnspecified = realisationTeachingLanguages.stream()
+            List<FieldValue> realisationTeachingLanguageValuesExcludingUnspecified = realisationTeachingLanguages.stream()
                 .filter(tl -> !tl.equals(TeachingLanguage.UNSPECIFIED.getValue()))
-                .toArray(String[]::new);
+                .map(FieldValue::of)
+                .toList();
 
             if (realisationTeachingLanguages.contains(TeachingLanguage.UNSPECIFIED.getValue())) {
-                BoolQueryBuilder realisationTeachingLanguageUnspecifiedQuery =
-                    QueryBuilders.boolQuery().mustNot(QueryBuilders.existsQuery("realisations.teachingLanguage.lowercase"));
+                Query realisationTeachingLanguageUnspecifiedQuery = new Query.Builder().bool(q -> q
+                        .mustNot(q2 -> q2
+                            .exists(eq -> eq
+                                .field("realisations.teachingLanguage.lowercase"))))
+                    .build();
 
-                BoolQueryBuilder assesmentItemTeachingLanguageUnspecifiedQuery =
-                    QueryBuilders.boolQuery().mustNot(QueryBuilders.existsQuery("completionOptions.assessmentItems.realisations.teachingLanguage.lowercase"));
+                Query assesmentItemTeachingLanguageUnspecifiedQuery = new Query.Builder().bool(q -> q
+                        .mustNot(q2 -> q2
+                            .exists(eq -> eq
+                                .field("completionOptions.assessmentItems.realisations.teachingLanguage.lowercase"))))
+                    .build();
 
-                if(realisationTeachingLanguageValuesExcludingUnspecified != null && realisationTeachingLanguageValuesExcludingUnspecified.length > 0) {
+                if(!CollectionUtils.isEmpty(realisationTeachingLanguageValuesExcludingUnspecified)) {
                     realisationTeachingLanguageQuery.should(realisationTeachingLanguageUnspecifiedQuery);
                     assessmentItemRealisationTeachingLanguageQuery.should(assesmentItemTeachingLanguageUnspecifiedQuery);
                 } else {
@@ -205,14 +263,16 @@ public class CourseUnitRealisationQueryBuilder extends AbstractStudiesQueryBuild
                 }
             }
 
-            if(realisationTeachingLanguageValuesExcludingUnspecified != null && realisationTeachingLanguageValuesExcludingUnspecified.length > 0) {
-                TermsQueryBuilder actualRealisationTeachingLanguageQuery =
-                    QueryBuilders.termsQuery("realisations.teachingLanguage.lowercase",
-                        realisationTeachingLanguageValuesExcludingUnspecified);
+            if(!CollectionUtils.isEmpty(realisationTeachingLanguageValuesExcludingUnspecified)) {
+                Query actualRealisationTeachingLanguageQuery = new Query.Builder().terms(tq -> tq
+                        .field("realisations.teachingLanguage.lowercase")
+                        .terms(tqf -> tqf.value(realisationTeachingLanguageValuesExcludingUnspecified)))
+                    .build();
 
-                TermsQueryBuilder actualAssessmentItemTeachingLanguageQuery =
-                    QueryBuilders.termsQuery("completionOptions.assessmentItems.realisations.teachingLanguage.lowercase",
-                        realisationTeachingLanguageValuesExcludingUnspecified);
+                Query actualAssessmentItemTeachingLanguageQuery = new Query.Builder().terms(tq -> tq
+                        .field("completionOptions.assessmentItems.realisations.teachingLanguage.lowercase")
+                        .terms(tqf -> tqf.value(realisationTeachingLanguageValuesExcludingUnspecified)))
+                    .build();
 
                 if(realisationTeachingLanguages.contains(TeachingLanguage.UNSPECIFIED.getValue())) {
                     realisationTeachingLanguageQuery.should(actualRealisationTeachingLanguageQuery);
@@ -223,36 +283,64 @@ public class CourseUnitRealisationQueryBuilder extends AbstractStudiesQueryBuild
                 }
             }
 
-            mainRealisationQuery.must(realisationTeachingLanguageQuery);
-            mainAssessmentItemQuery.must(assessmentItemRealisationTeachingLanguageQuery);
+            mainRealisationQuery.must(realisationTeachingLanguageQuery.build()._toQuery());
+            mainAssessmentItemQuery.must(assessmentItemRealisationTeachingLanguageQuery.build()._toQuery());
         }
     }
 
-    public void filterByStatuses(BoolQueryBuilder mainRealisationQuery, BoolQueryBuilder mainAssessmentItemQuery, List<StudyStatus> statuses) {
+    public void filterByStatuses(BoolQuery.Builder mainRealisationQuery, BoolQuery.Builder mainAssessmentItemQuery, List<StudyStatus> statuses) {
         if(CollectionUtils.isEmpty(statuses)) {
             return;
         }
 
-        mainRealisationQuery.must(QueryBuilders.boolQuery()
-            .must(QueryBuilders.termsQuery("realisations.status",
-                statuses.stream().map(s -> s.name()).collect(Collectors.toList()))));
+        mainRealisationQuery.must(q -> q
+            .terms(tq -> tq
+                .field("realisations.status")
+                .terms(tqf -> tqf.value(statuses.stream().map(s -> FieldValue.of(s.name())).toList()))));
 
-        mainAssessmentItemQuery.must(QueryBuilders.boolQuery()
-            .must(QueryBuilders.termsQuery("completionOptions.assessmentItems.realisations.status",
-                statuses.stream().map(s -> s.name()).collect(Collectors.toList()))));
+        mainAssessmentItemQuery.must(q -> q
+            .terms(tq -> tq
+                .field("completionOptions.assessmentItems.realisations.status")
+                .terms(tqf -> tqf.value(statuses.stream().map(s -> FieldValue.of(s.name())).toList()))));
     }
     
-    public NestedQueryBuilder generateAssessmentItemRealisationQuery(QueryBuilder innerQuery, String innerHitsName) {
-        return QueryBuilders.nestedQuery("completionOptions",
-            QueryBuilders.nestedQuery("completionOptions.assessmentItems",
-                QueryBuilders.nestedQuery("completionOptions.assessmentItems.realisations", innerQuery,
-                    ScoreMode.None).ignoreUnmapped(true).innerHit(new InnerHitBuilder(StringUtils.hasText(innerHitsName) ? innerHitsName + "_realisations" : null)),
-                ScoreMode.None).ignoreUnmapped(true).innerHit(new InnerHitBuilder(StringUtils.hasText(innerHitsName) ? innerHitsName + "_assessmentItems" : null)),
-            ScoreMode.None).ignoreUnmapped(true).innerHit(new InnerHitBuilder(StringUtils.hasText(innerHitsName) ? innerHitsName : null));
+    public Query generateAssessmentItemRealisationQuery(Query innerQuery, String innerHitsName) {
+        return new Query.Builder().nested(q -> q
+                        .path("completionOptions.assessmentItems.realisations")
+                        .ignoreUnmapped(true)
+                        .innerHits(ih -> ih.name(StringUtils.hasText(innerHitsName) ? innerHitsName : null))
+                        .query(innerQuery))
+                .build();
     }
 
-    public NestedQueryBuilder generateRealisationQuery(QueryBuilder innerQuery, String innerHitsName) {
-        return QueryBuilders.nestedQuery("realisations", innerQuery, ScoreMode.None).ignoreUnmapped(true)
-            .innerHit(new InnerHitBuilder(StringUtils.hasText(innerHitsName) ? innerHitsName : null));
+    public Query generateRealisationQuery(Query innerQuery, String innerHitsName) {
+        return new Query.Builder().nested(q -> q
+                .path("realisations")
+                .ignoreUnmapped(true)
+                .innerHits(ih -> ih.name(StringUtils.hasText(innerHitsName) ? innerHitsName : null))
+                .scoreMode(ChildScoreMode.None)
+                .query(innerQuery))
+            .build();
+    }
+
+    public void filterByMinEduGuidanceAreas(BoolQuery.Builder mainRealisationQuery, BoolQuery.Builder mainAssessmentItemQuery,
+                                            List<MinEduGuidanceArea> minEduGuidanceAreas) {
+        if(CollectionUtils.isEmpty(minEduGuidanceAreas)) {
+            return;
+        }
+
+        mainRealisationQuery.must(q -> q
+            .terms(tq -> tq
+                .field("realisations.minEduGuidanceArea")
+                .terms(tqf -> tqf.value(minEduGuidanceAreas.stream()
+                    .map(m -> FieldValue.of(m.getCode()))
+                    .toList()))));
+
+        mainAssessmentItemQuery.must(q -> q
+            .terms(tq -> tq
+                .field("completionOptions.assessmentItems.realisations.minEduGuidanceArea")
+                .terms(tqf -> tqf.value(minEduGuidanceAreas.stream()
+                    .map(m -> FieldValue.of(m.getCode()))
+                    .toList()))));
     }
 }
