@@ -1,38 +1,57 @@
 package fi.uta.ristiinopiskelu.persistence.repository.impl;
 
+import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
+import co.elastic.clients.elasticsearch._types.query_dsl.ChildScoreMode;
 import fi.uta.ristiinopiskelu.datamodel.dto.current.common.StudyElementType;
 import fi.uta.ristiinopiskelu.datamodel.entity.RealisationEntity;
 import fi.uta.ristiinopiskelu.persistence.repository.RealisationRepositoryExtended;
-import org.apache.lucene.search.join.ScoreMode;
-import org.elasticsearch.index.query.BoolQueryBuilder;
-import org.elasticsearch.index.query.QueryBuilders;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.elasticsearch.core.ElasticsearchRestTemplate;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.elasticsearch.client.elc.ElasticsearchTemplate;
+import org.springframework.data.elasticsearch.client.elc.NativeQuery;
+import org.springframework.data.elasticsearch.client.elc.NativeQueryBuilder;
 import org.springframework.data.elasticsearch.core.SearchHit;
-import org.springframework.data.elasticsearch.core.query.NativeSearchQuery;
-import org.springframework.data.elasticsearch.core.query.NativeSearchQueryBuilder;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RealisationRepositoryExtendedImpl implements RealisationRepositoryExtended {
 
     @Autowired
-    protected ElasticsearchRestTemplate elasticsearchTemplate;
+    protected ElasticsearchTemplate elasticsearchTemplate;
 
     @Override
     public List<RealisationEntity> findByAssessmentItemReference(String referenceIdentifier, String referenceOrganizer, String referenceAssessmentItemId) {
-        BoolQueryBuilder query = QueryBuilders.boolQuery()
-            .must(QueryBuilders.nestedQuery("studyElementReferences", QueryBuilders.boolQuery()
-                .must(QueryBuilders.matchQuery("studyElementReferences.referenceIdentifier", referenceIdentifier))
-                .must(QueryBuilders.matchQuery("studyElementReferences.referenceOrganizer", referenceOrganizer))
-                .must(QueryBuilders.matchQuery("studyElementReferences.referenceType", StudyElementType.ASSESSMENT_ITEM.name()))
-                .must(QueryBuilders.matchQuery("studyElementReferences.referenceAssessmentItemId", referenceAssessmentItemId)), ScoreMode.None));
+        BoolQuery.Builder query = new BoolQuery.Builder()
+            .must(q -> q
+                .nested(nq -> nq
+                    .path("studyElementReferences")
+                    .scoreMode(ChildScoreMode.None)
+                    .query(q2 -> q2
+                        .bool(bq -> bq
+                            .must(q3 -> q3
+                                .match(mq -> mq
+                                    .field("studyElementReferences.referenceIdentifier")
+                                    .query(referenceIdentifier)))
+                            .must(q3 -> q3
+                                .match(mq -> mq
+                                    .field("studyElementReferences.referenceOrganizer")
+                                    .query(referenceOrganizer)))
+                            .must(q3 -> q3
+                                .match(mq -> mq
+                                    .field("studyElementReferences.referenceType")
+                                    .query(StudyElementType.ASSESSMENT_ITEM.name())))
+                            .must(q3 -> q3
+                                .match(mq -> mq
+                                    .field("studyElementReferences.referenceAssessmentItemId")
+                                    .query(referenceAssessmentItemId)))))));
 
-        NativeSearchQuery builder = new NativeSearchQueryBuilder()
-            .withQuery(query)
-            .build();
+        NativeQuery builder = new NativeQueryBuilder()
+                .withQuery(query.build()._toQuery())
+                .withPageable(Pageable.unpaged())
+                .build();
 
-        return elasticsearchTemplate.search(builder, RealisationEntity.class).get().map(SearchHit::getContent).collect(Collectors.toList());
+        return elasticsearchTemplate.search(builder, RealisationEntity.class).get()
+                .map(SearchHit::getContent)
+                .toList();
     }
 }
